--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <h1>BURGUER ANTEUX</h1>
-<app-product-list></app-product-list>
+<app-category-list></app-category-list>
+<!-- <app-product-list></app-product-list> -->
