--- a/src/app/views/productsList/product/product/product.component.html
+++ b/src/app/views/productsList/product/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="card h-100" style="width:250px">
+<div class="card h-100 m-1" style="width:250px">
   <img class="card-img-top"
     src="https://media.istockphoto.com/id/1206323282/es/foto/hamburguesa-jugosa-sobre-fondo-blanco.jpg?s=612x612&w=0&k=20&c=r2mLaVFZxtRk4MeKpdQLtwTkcctyOpGEP-OxPeyo4_c="
     alt="Hamburguesa" style="width:100%">
