--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>BURGUER ANTEUX</h1>
-<app-category-list></app-category-list>
+<app-carta></app-carta>
 <!-- <app-product-list></app-product-list> -->
