not found page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>BURGUER ANTEUX</h1>
+<!-- <h1>BURGUER ANTEUX</h1> -->
 <app-carta></app-carta>
-<!-- <app-product-list></app-product-list> -->
+
+<!-- <app-not-found></app-not-found> -->
