--- a/src/app/pages/product/dialog/dialog.component.scss
+++ b/src/app/pages/product/dialog/dialog.component.scss
@@ -26,7 +26,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
+  color: #000;
 }
 
 .quantity-controls {
@@ -36,8 +36,8 @@
   align-items: center;
 
   button {
-    color: #000;
     margin: 5px;
+    color: #F4E10B;
   }
 }
 
