--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -11,6 +11,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 50%;
 }
 .nav-link{
     color: $color-blanco;
@@ -26,8 +27,47 @@ img {
 }
 
 .person{
-  color: $color-amarillo;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    color: $color-amarillo;
+
 }
 .carrito {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
     color: $color-amarillo;
 }
+
+#collapsibleNavbar {
+    z-index: -1;
+}
+
+.acceso {
+    color: $color-amarillo;
+    width: 15px;
+    height: 15px;
+    font-size: 7px;
+    font-weight: 500;
+    line-height: 15px;
+    text-align: center;
+}
+.cesta{
+    display: inline-block;
+    background-color: $color-amarillo;
+    color: $color-negro;
+    width: 15px;
+    height: 15px;
+    font-size: 7px;
+    font-weight: 500;
+    line-height: 15px;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    right: -2px;
+    top: 5px;
+}
+
