--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <h1>BURGUER ANTEUX</h1> -->
-<app-carta></app-carta>
-
-<!-- <app-not-found></app-not-found> -->
+<router-outlet></router-outlet>
