--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -78,7 +78,6 @@
 
 
 .main {
-
   min-height: 600px;
   margin: 0px auto;
   width: auto;
@@ -86,12 +85,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .path {
   stroke-dasharray: 300;
   stroke-dashoffset: 300;
   animation: dash 4s alternate infinite;
+}
+
+.error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.btn {
+
+  margin-top: 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid #4B4B62;
+  background-color: transparent;
+  color: #4B4B62;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 @keyframes dash {
@@ -107,6 +129,4 @@
     fill: transparent;
     stroke-dashoffset: -200;
   }
-
-
 }
