header and footer

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,11 +1,13 @@
 <header class="sticky-top">
     <div class="container-fluid shadow-sm p-3">
         <nav class="navbar navbar-expand-md">
-            <button class="menu navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavbar" aria-label="Toggle navigation">
-                <mat-icon>menu</mat-icon>
-            </button>
-            <div class="logo">
+            <div>
+                <button class="menu navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar" aria-label="Toggle navigation">
+                    <mat-icon>menu</mat-icon>
+                </button>
+            </div>
+            <div class="logo d-flex">
                 <img src="assets/logoblanco.png" alt="Logo web">
             </div>
             <div class="order-md-3">
