--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
+<div class="wrapper">
+    <img src="./../assets/100x76.jpg" alt="Imagen de la portada" class="img-fluid">
+</div>
 <app-footer></app-footer>
