--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -12,6 +12,13 @@ img {
     justify-content: center;
     align-items: center;
     margin-left: 50%;
+    cursor: pointer;
+}
+.nav-item{
+    a:hover{
+        cursor: pointer;
+        color: $color-amarillo;
+    }
 }
 .nav-link{
     color: $color-blanco;
@@ -42,15 +49,11 @@ img {
     color: $color-amarillo;
 }
 
-#collapsibleNavbar {
-    z-index: -1;
-}
-
 .acceso {
     color: $color-amarillo;
     width: 15px;
     height: 15px;
-    font-size: 7px;
+    font-size: 9px;
     font-weight: 500;
     line-height: 15px;
     text-align: center;
@@ -59,15 +62,13 @@ img {
     display: inline-block;
     background-color: $color-amarillo;
     color: $color-negro;
-    width: 15px;
-    height: 15px;
-    font-size: 7px;
-    font-weight: 500;
-    line-height: 15px;
+    width: 14px;
+    height: 14px;
+    font-size: 10px;
     text-align: center;
-    border-radius: 50%;
+    border-radius: 60%;
     position: absolute;
-    right: -2px;
     top: 5px;
+    right: .2px;
 }
 
