--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,51 +1,8 @@
-<!-- <section>
-  <div class="login-wrapper">
-    <div class="login-container">
-      <div class="main">
-        <div class="login-form">
-          <h1 class="login-heading mb-4">LOGIN</h1>
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="formulario">
-            <div class="login-username mx-5 mb-3">
-              <mat-form-field>
-                <mat-label>
-                  <mat-icon>person</mat-icon>
-                  <span>Email</span>
-                </mat-label>
-                <input matInput placeholder="pat@example.com" formControlName="email" required>
-                <mat-error *ngIf="loginForm.get('email')?.hasError('email')">Correo inválido</mat-error>
-                <mat-error *ngIf="loginForm.get('email')?.hasError('required')">Introduzca un correo</mat-error>
-              </mat-form-field>
-            </div>
-            <div class="login-password mx-5 mb-3">
-              <mat-form-field>
-                <mat-label>
-                  <mat-icon>lock</mat-icon>
-                  <span>Contraseña</span>
-                </mat-label>
-                <input matInput formControlName="password" required>
-                <mat-error *ngIf="loginForm.get('password')?.hasError('required')">Introduzca una contraseña</mat-error>
-              </mat-form-field>
-            </div>
-            <div class="login-confirm">
-              <button mat-raised-button color="primary" type="submit">Login</button>
-            </div>
-          </form>
-
-          <div class="login-footer mt-5">
-            ¿No tienes cuenta? <a routerLink="/register">Regístrate</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
 
 <section>
-
   <mat-card>
-    <mat-card-title class="login-heading">Login</mat-card-title>
-    <mat-card-content class="px-4">
+    <mat-card-title class="login-heading">LOGIN</mat-card-title>
+    <mat-card-content class="">
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="formulario">
         <div class="login-username mx-5 mb-3">
           <mat-form-field>
@@ -71,14 +28,12 @@
         </div>
 
         <div class="login-confirm">
-          <button mat-raised-button color="primary" type="submit">Login</button>
+          <button mat-raised-button color="primary" type="submit">LOGIN</button>
         </div>
         <div class="login-footer mt-5">
           ¿No tienes cuenta? <a routerLink="/register">Regístrate</a>
         </div>
       </form>
-
-
     </mat-card-content>
   </mat-card>
 </section>
