--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,46 +1,11 @@
-// .login-wrapper {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   height: 100vh;
-//   background: #000;
+.login-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  font-size: 2rem;
+}
 
-  .login-heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 20vh;
-    font-size: 2rem;
-  }
-
-//   .login-form {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: #fff;
-//     border: 1px solid #000;
-//     height: 80vh;
-//     width: calc(100vw - 20px);
-//   }
-
-//   .main {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: blue;
-//     border: 1px solid #fff;
-//     height: 80vh;
-//   }
-
-//   .formulario {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     width: calc(100vw - 20px);
-//   }
-// }
 
 mat-error {
   font-size: 12px;
@@ -52,6 +17,7 @@ section {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  max-width: 100vw;
   background: #000;
 }
 
@@ -71,6 +37,8 @@ mat-card-title,
 mat-card-content {
   display: flex;
   justify-content: center;
+  max-width: 100vw;
+
 }
 
 .login-confirm {
