--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,4 +1,4 @@
 $fuente-anteux: 'DK Mango Smoothie', cursive;
-$color-negro: hsl(0, 0%, 9%);
-$color-amarillo: hsl(55, 91%, 50%);
-$color-blanco: hsl(0, 0%, 100%);
+$color-negro: #171717;
+$color-amarillo: #f4e00b;
+$color-blanco: #ffffff
