--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,6 @@
 <section>
   <mat-card>
-
-    <mat-card-title class="login-heading"> LOGIN </mat-card-title>
+    <mat-card-title class="login-heading">INICIAR SESION</mat-card-title>
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="formulario">
         <div class="login-username mx-5 mb-3">
@@ -33,7 +32,7 @@
         </div>
 
         <div class="login-confirm">
-          <button mat-raised-button type="submit">LOGIN</button>
+          <button [disabled]="loginForm.invalid" mat-raised-button type="submit">LOGIN</button>
         </div>
         <div class="login-footer mt-5">
           ¿No tienes cuenta? <a routerLink="/register">&nbsp;Regístrate</a>
