Actualizaciones en los componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-<div class="wrapper">
-    <img src="./../assets/100x76.jpg" alt="Imagen de la portada" class="img-fluid">
+<div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
