--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -4,26 +4,40 @@ header{
     background-color: $color-negro;
 }
 
-img {
-    width: 50px;
-    height: 50%;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 50%;
-    cursor: pointer;
-}
-.nav-item{
-    a:hover{
-        cursor: pointer;
-        color: $color-amarillo;
+.logo{
+    margin-left: 5%;
+    
+    img {
+        width: 55px;
+        height: 50%;
+        padding: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
+
+.navbar-collapse {
+    padding-left: 1.5rem;
+}
+
+.nav-item {
+    a {
+        color: $color-blanco;
+      &:hover {
+        transform: scale(1.1);
+        color: $color-amarillo;
+      }
+    }
+    .nav-link.active {
+      color: $color-amarillo;
+    }
+
+}
+
 .nav-link{
     color: $color-blanco;
 }
-
 .menu{
     color: $color-amarillo;
     border: none;
@@ -71,4 +85,17 @@ img {
     top: 5px;
     right: .2px;
 }
-
+.cart-menu {
+    width: 100%; /* Ajusta el ancho según tus necesidades */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Aplica una sombra */
+    color: $color-amarillo;
+  }
+  
+  .cart-items {
+    padding: 2rem;
+  }
+  
+  .cart-items p {
+    margin: 0;
+    padding: 5px 0;
+  }
