--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -16,9 +16,11 @@
             </div>
             <div class="order-md-3">
                 <div class="d-flex">
-                    <button mat-icon-button class="person">
-                        <mat-icon>person</mat-icon>
-                    </button>
+                    <a [routerLink]="['/login']">
+                        <button mat-icon-button class="person">
+                            <mat-icon>person</mat-icon>
+                        </button>
+                    </a>
                     <button mat-icon-button class="carrito">
                         <mat-icon>shopping_cart</mat-icon>
                     </button>
