--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
-.container-fluid {
-    min-height: 100vh;  
+.wrapper{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    .content{
+        flex: 1;
+    }
 }
