--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
-<div class="row image-container">
+<div class="image-container">
     <div class="content">
         <div class="container">
-            <img src="../../../assets/logoblanco.png" alt="logo" class="logo">
+            <div class="imagen">
+                <img src="../../../assets/logoblanco.png" alt="logo" class="logo">
+            </div>
             <div class="title">
                 <h1> Donde nacen las mejores hamburguesas</h1>
             </div>
