--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,47 +1,52 @@
 <header class="sticky-top">
-    <div class="container-fluid shadow-sm p-3">
-        <nav class="navbar navbar-expand-md">
-            <div>
-                <button class="menu navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavbar" aria-label="Toggle navigation">
-                    <mat-icon>menu</mat-icon>
-                </button>
-            </div>
-            <div class="logo">
-                <a [routerLink]="['/inicio']">
-                    <div class="d-flex">
-                        <img src="assets/logoblanco.png" alt="Logo web">
-                    </div>
-                </a>
-            </div>
-            <div class="order-md-3">
-                <div class="d-flex">
-                    <a [routerLink]="['/login']">
-                        <button mat-icon-button class="person">
-                            <mat-icon>person</mat-icon>
-                        </button>
-                    </a>
-                    <button mat-icon-button class="carrito">
-                        <mat-icon>shopping_cart</mat-icon>
-                    </button>
-                </div>
-            </div>
-            <div class="navbar-collapse collapse order-md-2" id="collapsibleNavbar">
-                <ul class="navbar-nav mx-auto mt-2">
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/inicio']" routerLinkActive="active">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/carta']" routerLinkActive="active">Carta</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/about']" routerLinkActive="active">Sobre nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['/reservas']" routerLinkActive="active">Reservas</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+  <div class="container-fluid shadow-sm p-3">
+    <nav class="navbar navbar-expand-md">
+      <div>
+        <button class="menu navbar-toggler d-md-none" type="button" data-bs-toggle="collapse"
+          data-bs-target="#collapsibleNavbar" aria-label="Toggle navigation">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div class="logo">
+        <a [routerLink]="['/inicio']">
+          <div class="d-flex">
+            <img src="assets/logoblanco.png" alt="Logo web">
+          </div>
+        </a>
+      </div>
+      <div class="order-md-3">
+        <div class="d-flex">
+          <a *ngIf="isSessionActive" [routerLink]="['/perfil']">
+            <button mat-icon-button class="person">
+              <mat-icon>account_circle</mat-icon>
+            </button>
+          </a>
+          <a *ngIf="!isSessionActive" [routerLink]="['/login']">
+            <button mat-icon-button class="person">
+              <mat-icon>person</mat-icon>
+            </button>
+          </a>
+          <button mat-icon-button class="carrito">
+            <mat-icon>shopping_cart</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="navbar-collapse collapse order-md-2" id="collapsibleNavbar">
+        <ul class="navbar-nav mx-auto mt-2">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/inicio']" routerLinkActive="active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/carta']" routerLinkActive="active">Carta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/about']" routerLinkActive="active">Sobre nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/reservas']" routerLinkActive="active">Reservas</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 </header>
