--- a/src/app/pages/product/dialog/dialog.component.html
+++ b/src/app/pages/product/dialog/dialog.component.html
@@ -6,7 +6,7 @@
 <div class="dialog">
   <mat-dialog-content>
     <h2 class="dialog-title">{{ product.name }}</h2>
-    <p class="price">{{product.price}}€</p>
+    <p class="price">{{product.price | number:'1.2'}}€</p>
     <p class="description">{{product.description}}</p>
     <div class="quantity-controls">
       <button mat-icon-button (click)="remove()">
@@ -19,8 +19,8 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button (click)="cancel()" class="añadir">
-      <span>Añadir {{quantity}} por {{total}}€</span>
+    <button mat-button (click)="addToCart()" class="añadir">
+      <span>Añadir {{quantity}} por {{total | number:'1.2'}}€</span>
     </button>
   </mat-dialog-actions>
 </div>
