--- a/src/app/pages/registro/succes-dialog/succes-dialog.component.html
+++ b/src/app/pages/registro/succes-dialog/succes-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog">
-  <h2>REGISTRADO CORRECTAMENTE</h2>
+  <h2>{{data.message}}</h2>
   <mat-dialog-content>
     <div class="success-checkmark">
       <div class="check-icon">
