--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,1 +1,95 @@
-<p>perfil works!</p>
+<section>
+  <mat-card>
+    <mat-card-title class="login-heading">Bienvenid@, {{name}} </mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="formulario">
+        <div class="login-nombre mx-5 mb-3">
+          <mat-form-field class="nombre">
+            <mat-label>
+              <mat-icon>person</mat-icon>
+              <span>Nombre</span>
+            </mat-label>
+            <input matInput placeholder="Jhon" formControlName="name" required >
+            <mat-error *ngIf="userForm.get('name')?.hasError('required')">Introduzca un nombre</mat-error>
+          </mat-form-field>
+          <mat-form-field class="apellido">
+            <mat-label>
+              <mat-icon>person</mat-icon>
+              <span>Apellidos</span>
+            </mat-label>
+            <input matInput placeholder="Doe" formControlName="lastname" required>
+            <mat-error *ngIf="userForm.get('lastname')?.hasError('required')">Introduzca un apellido</mat-error>
+          </mat-form-field>
+        </div>
+        <div class="login-email mx-5 mb-3">
+          <mat-form-field class="email">
+            <mat-label>
+              <mat-icon>mail</mat-icon>
+              <span>Email</span>
+            </mat-label>
+            <input matInput placeholder="johndoe@example.com" formControlName="email" required>
+            <mat-error *ngIf="userForm.get('email')?.hasError('email')">Correo inválido</mat-error>
+            <mat-error *ngIf="userForm.get('email')?.hasError('required')">Introduzca un correo</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="login-address mx-5 mb-3">
+          <mat-form-field class="address">
+            <mat-label>
+              <mat-icon>place</mat-icon>
+              <span>Dirección</span>
+            </mat-label>
+            <input matInput formControlName="address" required>
+            <mat-error *ngIf="userForm.get('address')?.hasError('required')">Introduzca una dirección</mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="phone">
+            <mat-label>
+              <mat-icon>phone</mat-icon>
+              <span>Teléfono</span>
+            </mat-label>
+            <input matInput formControlName="phone" required>
+            <mat-error *ngIf="userForm.get('phone')?.hasError('required')">Introduzca un teléfono</mat-error>
+            <mat-error *ngIf="userForm.get('phone')?.hasError('pattern')">Teléfono inválido</mat-error>
+          </mat-form-field>
+        </div>
+        <div class="login-password mx-5 mb-3">
+          <mat-form-field class="password">
+            <mat-label>
+              <mat-icon>lock</mat-icon>
+              <span>Contraseña</span>
+            </mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required minlength="8">
+            <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="userForm.get('password')?.hasError('required')">Introduzca una contraseña</mat-error>
+            <mat-error *ngIf="userForm.get('password')?.hasError('minlength')">Al menos 8 caracteres</mat-error>
+          </mat-form-field>
+          <mat-form-field class="password2">
+            <mat-label>
+              <mat-icon>lock</mat-icon>
+              <span>Repetir contraseña</span>
+            </mat-label>
+            <input matInput [type]="hide2 ? 'password' : 'text'" formControlName="password2" required minlength="8">
+            <button type="button" mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide2">
+              <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="userForm.get('password2')?.hasError('passwordMismatch')">
+              Las contraseñas no coinciden
+            </mat-error>
+
+          </mat-form-field>
+
+        </div>
+
+        <div class="login-confirm">
+          <button [disabled]="userForm.invalid" mat-raised-button type="submit">ACTUALIZAR DATOS</button>
+          <button class="sesion" mat-raised-button type="button" (click)="cerrarSesion()"> <mat-icon>logout</mat-icon> CERRAR SESIÓN</button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</section>
