--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -21,13 +21,22 @@
               <mat-icon>account_circle</mat-icon>
             </button>
           </a> -->
-          <button *ngIf="isSessionActive" mat-icon-button [matMenuTriggerFor]="menu"
-            class="person"><mat-icon>account_circle</mat-icon></button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="['/perfil']"><mat-icon>manage_accounts</mat-icon>Mi perfil</button>
-            <button mat-menu-item><mat-icon>shopping_bag</mat-icon>Mis pedidos</button>
-            <button mat-menu-item (click)="cerrarSesion()"><mat-icon>logout</mat-icon> Salir</button>
-          </mat-menu>
+          <div class="dropdown">
+            <button *ngIf="isSessionActive" mat-icon-button class="person dropbtn">
+              <mat-icon>account_circle</mat-icon>
+            </button>
+            <div class="dropdown-content">
+              <a [routerLink]="['/perfil']">
+                <mat-icon>manage_accounts</mat-icon>Mi perfil
+              </a>
+              <a class="mis-pedidos">
+                <mat-icon>shopping_bag</mat-icon>Pedidos
+              </a>
+              <a (click)="cerrarSesion()">
+                <mat-icon>logout</mat-icon>Salir
+              </a>
+            </div>
+          </div>
           <a *ngIf="!isSessionActive" [routerLink]="['/login']">
             <button mat-icon-button class="person">
               <mat-icon>person</mat-icon>
