--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,7 +4,7 @@
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="formulario">
         <div class="login-username mx-5 mb-3">
-          <mat-form-field>
+          <mat-form-field color="accent">
             <mat-label>
               <mat-icon>person</mat-icon>
               <span>Email</span>
@@ -16,7 +16,7 @@
         </div>
 
         <div class="login-password mx-5 mb-3">
-          <mat-form-field class="password">
+          <mat-form-field color="accent" class="password">
             <mat-label>
               <mat-icon>lock</mat-icon>
               <span>Contraseña</span>
