--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $BurgerAnteux-FrontEnd-primary: mat.define-palette(mat.$yellow-palette);
-$BurgerAnteux-FrontEnd-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$BurgerAnteux-FrontEnd-accent: mat.define-palette(mat.$grey-palette, 900);
 
 // The warn palette is optional (defaults to red).
 $BurgerAnteux-FrontEnd-warn: mat.define-palette(mat.$red-palette);
