routing a mis pedidos agregado

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -29,7 +29,7 @@
               <a [routerLink]="['/perfil']">
                 <mat-icon>manage_accounts</mat-icon>Mi perfil
               </a>
-              <a class="mis-pedidos">
+              <a class="mis-pedidos" [routerLink]="['/mispedidos']">
                 <mat-icon>shopping_bag</mat-icon>Pedidos
               </a>
               <a (click)="cerrarSesion()">
