--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,10 +1,39 @@
 <div class="close">
-    <button mat-icon-button>
+    <button mat-icon-button (click)="close()">
         <mat-icon>close</mat-icon>
     </button>
 </div>
 <div class="dialog">
+    <h2 class="dialog-title">Resumen de tu pedido: </h2>
+
     <mat-dialog-content>
-        <h2 class="dialog-title">Resumen de tu pedido: </h2>
+
+        <div class="row">
+            <div class="col-6">
+                <p class="price">Producto</p>
+            </div>
+            <div class="col-6">
+                <p class="price">Precio</p>
+            </div>
+        </div>
+
+        <div class="row" *ngFor="let item of cart">
+            <div class="col-6">
+                <p class="price">{{item.product.name}}</p>
+            </div>
+            <div class="col-6">
+                <p class="price">{{item.product.price | number:'1.2'}}€</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p class="price">Total</p>
+            </div>
+            <div class="col-6">
+                <p class="price">€</p>
+            </div>
+        </div>
+
     </mat-dialog-content>
 </div>
