--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
                 <h1> Donde nacen las mejores hamburguesas</h1>
             </div>
             <div class="d-flex">
-                <button class="btn" [routerLink]="['/carta']">Haz tu pedido!</button>
+                <button class="btn" [routerLink]="['/carta']">¡Haz tu pedido!</button>
             </div>
         </div>
     </div>
