new button for scrollToTop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,7 @@
   </div>
   <app-footer></app-footer>
 </div>
+
+<button mat-icon-button id="scroll-to-top" (click)="scrollToTop()" [class.show]="showScrollButton">
+  <mat-icon>keyboard_arrow_up</mat-icon>
+</button>
