--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,31 +1,63 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>¿Estás buscando un sitio que ofrezca hamburguesas caseras en Pinto?</h2>
-            <p>En nuestro restaurante familiar llevamos desde 1990 apostando por la comida casera, por ello todas
-                nuestras carnes y salsas son elaboradas por nosotros mismos, utilizando además exclusivamente alimentos
-                frescos y pan de alta calidad. ¡Si quieres probar unas hamburguesas únicas llámanos para reservar mesa o
-                si prefieres nosotros te lo llevamos a casa!</p>
-        </div>
-        <div class="col-md-6">
-            <img src="../../../assets/hamburguesas.jpg" alt="Imagen de hamburguesas" class="img-fluid">
-        </div>
-    </div>
+<div class="image-container">
+    <div class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>
+                        ¿Estás buscando un sitio que ofrezca hamburguesas caseras en Pinto?
+                    </h2>
+                    <p>
+                        En nuestro restaurante familiar llevamos desde 1990 apostando por la
+                        comida casera, por ello todas nuestras carnes y salsas son
+                        elaboradas por nosotros mismos, utilizando además exclusivamente
+                        alimentos frescos y pan de alta calidad. ¡Si quieres probar unas
+                        hamburguesas únicas llámanos para reservar mesa o si prefieres
+                        nosotros te lo llevamos a casa!
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="../../../assets/hamburguesas.jpg" alt="Imagen de hamburguesas"
+                        class="img-fluid rounded" />
+                </div>
+            </div>
 
-    <div class="row mt-5">
-        <div class="col-md-6">
-            <h3>Nuestro producto estrella</h3>
-            <p>La Burger Anteux es nuestra hamburguesa más emblemática, ya que ofrece una carne sublime con una salsa
-                muy especial. Además, como complemento puedes disfrutar de patatas clásicas, bravas o de alguna de las
-                raciones que tenemos en la carta.</p>
-            <img src="../../../assets/anteux.jpg" alt="Imagen de hamburguesa Anteux" class="img-fluid mb-4">
-        </div>
-        <div class="col-md-6">
-            <h3>Para el postre</h3>
-            <p>Te sugerimos nuestra especialidad que son unas tortitas que siempre cautivan a los paladares más golosos.
-                ¡Si quieres probar algo diferente vive la experiencia de sabor que te proponemos desde Anteux Burger!
-            </p>
-            <img src="../../../assets/TORTITAS.jpg" alt="Imagen de tortitas" class="img-fluid">
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <h3>Nuestro producto estrella</h3>
+                    <p>
+                        La Burger Anteux es nuestra hamburguesa más emblemática, ya que
+                        ofrece una carne sublime con una salsa muy especial. Además, como
+                        complemento puedes disfrutar de patatas clásicas, bravas o de alguna
+                        de las raciones que tenemos en la carta.
+                    </p>
+                    <div class="text-center">
+                        <img src="../../../assets/anteux.jpg" alt="Imagen de hamburguesa Anteux"
+                            class="burguer img-fluid rounded center mb-4" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3>Para el postre</h3>
+                    <p>
+                        Te sugerimos nuestra especialidad que son unas tortitas que siempre
+                        cautivan a los paladares más golosos. ¡Si quieres probar algo
+                        diferente vive la experiencia de sabor que te proponemos desde
+                        Anteux Burger!
+                    </p>
+                    <div class="tortitas d-flex">
+                        <img src="../../../assets/TORTITAS.jpg" alt="Imagen de tortitas"
+                            class="img-fluid rounded mb-4" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <h2 class="text-center">Conoce todas nuestras ventajas</h2>
+                <p class="text-center">
+                    Una de las principales señas de identidad que nos ha caracterizado
+                    desde nuestros orígenes es la atención a nuestros clientes, por eso:
+                </p>
+            </div>
+
+
         </div>
     </div>
 </div>
